<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/word_name"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/word_services"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/word_date"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />


</LinearLayout>