<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/nootifyLogo"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/logo_round" />


    <Switch
        android:id="@+id/userSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userSwitch"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/userSwitch"
        android:layout_toStartOf="@+id/userSwitch"
        android:text="@string/word_customer"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userSwitch"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/userSwitch"
        android:layout_toRightOf="@+id/userSwitch"
        android:text="@string/word_hairdresser"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:onClick="getStarted"
        android:text="@string/word_getStarted"
        android:textColor="@android:color/background_dark" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>


</RelativeLayout>