<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MaleListActivity">


    <ListView
        android:id="@+id/maleListview"
        android:layout_width="match_parent"
        android:layout_height="467dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/word_image"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/word_officeName"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/word_point"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>