<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HDInfoActivity">

    <LinearLayout
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/hdImageView"
        android:layout_marginBottom="-143dp"
        android:layout_marginTop="129dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/servicesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="servicesClicked"
            android:text="@string/word_services"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/contactUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="contactUsClicked"
            android:text="@string/word_contactUs"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="feedbackClicked"
            android:text="@string/word_giveUsAFeedback"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/commentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        />
    </ScrollView>

    <ImageView
        android:id="@+id/hdImageView"
        android:layout_width="272dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


</RelativeLayout>