<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/officeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OfficeActivity">


    <ImageView
        android:id="@+id/hdImageView"
        android:layout_width="200dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/addressAdminEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/hdNameTextView"
            android:layout_marginTop="65dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contactAdminEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addressAdminEditText"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>


    <TextView
        android:id="@+id/servicesAdminTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="servicesClicked"
        android:text="@string/word_services"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/pointAdminTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/servicesAdminTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/word_yourPointIs"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/schedulesButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="113dp"
        android:onClick="saveButtonClicked"
        android:text="@string/word_save"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/schedulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="118dp"
        android:onClick="schedulesButtonClicked"
        android:text="@string/word_schedules"
        android:textColor="@android:color/background_dark" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="123dp"
        android:clickable="true"
        android:onClick="fab"
        app:srcCompat="@android:drawable/btn_star_big_on" />


</RelativeLayout>